Added route for searching of records and fixed errors

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "semantic-search-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "engines": {
-    "node": "14.17.6"
+    "node": "20.10.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "npx ts-node index.ts"
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^1.1.2",
